| Summary: | ASTERISK-28948: ARI channel create doesn't referencing the channel_id parameter | ||
| Reporter: | sungtae kim (pchero) | Labels: | |
| Date Opened: | 2020-06-12 05:16:06 | Date Closed: | 2020-06-15 09:44:57 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_ari |
| Versions: | 16.11.0 17.5.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When ARI user sends the request to the /ari/channels/create POST, the Asterisk doesn't get the channelId from the paramter.
{noformat} $ curl -X "POST" "http://localhost:8088/ari/channels/create" \ > -H 'Content-Type: application/json; charset=utf-8' \ > -u 'asterisk:asterisk' \ > -d $'{ > "app": "mb_voip", > "endpoint": "PJSIP/mb-voip/sip:test@example.com", > "appArgs": "MB_DIALED=1", > "callerId": "messagebird", > "channelId": "test_call" > }' {"id":"1591956369.0","name":"PJSIP/mb-voip-00000000","state":"Down","caller":{"name":"","number":""},"connected":{"name":"","number":""},"accountcode":"","dialplan":{"context":"mb-voip","exten":"s","priority":1,"app_name":"","app_data":""},"creationtime":"2020-06-12T10:06:09.881+0000","language":"en"} {noformat} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-06-12 05:16:07.716-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2020-06-15 08:48:19.645-0500 Change 14519 merged by Friendly Automation: res_ari: Fix create channel request channelId parameter parsing [https://gerrit.asterisk.org/c/asterisk/+/14519|https://gerrit.asterisk.org/c/asterisk/+/14519] By: Friendly Automation (friendly-automation) 2020-06-15 08:51:00.901-0500 Change 14552 merged by Friendly Automation: res_ari: Fix create channel request channelId parameter parsing [https://gerrit.asterisk.org/c/asterisk/+/14552|https://gerrit.asterisk.org/c/asterisk/+/14552] By: Friendly Automation (friendly-automation) 2020-06-15 08:54:53.789-0500 Change 14553 merged by Friendly Automation: res_ari: Fix create channel request channelId parameter parsing [https://gerrit.asterisk.org/c/asterisk/+/14553|https://gerrit.asterisk.org/c/asterisk/+/14553] By: Friendly Automation (friendly-automation) 2020-06-16 08:46:22.456-0500 Change 14554 merged by Friendly Automation: res_ari: Fix create channel request channelId parameter parsing [https://gerrit.asterisk.org/c/asterisk/+/14554|https://gerrit.asterisk.org/c/asterisk/+/14554] By: Friendly Automation (friendly-automation) 2020-06-16 09:29:10.906-0500 Change 14555 merged by Kevin Harwell: res_ari: Fix create channel request channelId parameter parsing [https://gerrit.asterisk.org/c/asterisk/+/14555|https://gerrit.asterisk.org/c/asterisk/+/14555] | ||